koishi/kubernetes/traefik/k8s.middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: noindex
  namespace: default
spec:
  headers:
    customResponseHeaders:
      X-Robots-Tag: noindex

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: lanonly
  namespace: default
spec:
  ipAllowList:
    sourceRange:
      - 192.168.0.0/16
      - 172.16.0.0/12
      - 10.0.0.0/8
